# voice

./: .gitignore  Cargo.toml  a.py  build-push-docker.cmd  config.toml  dockerfile  index.html  input.m4a  input2.m4a  log.txt  measure.txt  out.m4a  rustfmt.toml  test.cmd  test.html  test.txt
dash/: index.html
src/: avg.rs  config.rs  ffmpeg.rs  gui.rs  main.rs  task.rs  video.rs  web.rs
src/template/: mod.rs
templates/: index.html  style.css
voice-web/: Cargo.toml  askama.toml
voice-web/src/: main.rs  templates.rs
voice-web/static/: script.js  style.css
voice-web/templates/: index.html
web/: completed.css  completed.html  index.css  index.html
web/.well-known/acme-challenge/: kVrUJ9auML1rSGVXZSEHHNzBVcMfrvLJo5npgUyMOrY
web2.0/: .eslintrc  .gitignore  .prettierrc  _pnpm-lock.yaml  compare.html  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1705761006389-081509bde1c85.mjs
web2.0/mock/: main.js  package.json
web2.0/src/: App.css  App.tsx  Main.css  Main.tsx  Navbar.css  Navbar.tsx  globalState.ts  index.css  index.tsx  intervalTree.ts  rest.ts  util.css  util.tsx
web2.0/src/assets/: mitSkips.json  prepare_wave.cmd  primSkipRanges.json
web2.0/src/components/: Button.css  Button.tsx  CopyableToken.css  CopyableToken.tsx  FileSelector.css  FileSelector.tsx  InfoTooltip.css  InfoTooltip.tsx  InputField.css  InputField.tsx  ProgressBar.css  ProgressBar.tsx  Slider.css  Slider.tsx  Switch.css  Switch.tsx  VideoPlayer.css  VideoPlayer.tsx
web2.0/src/screens/: Task.css  Task.tsx  Upload.css  Upload.tsx
web2.0/voice-server/: .gitignore  Cargo.toml  build-containers.cmd  build-containers.sh  dockerfile  index.html
web2.0/voice-server/builder/: Cargo.toml
web2.0/voice-server/builder/src/: lib.rs  main.rs  yc.rs
web2.0/voice-server/include/: builder_comperr.rs
web2.0/voice-server/voice-analyzer/: Cargo.toml  dockerfile
web2.0/voice-server/voice-analyzer/src/: analyze.rs  ffmpeg.rs  main.rs
web2.0/voice-server/voice-file-upload/: Cargo.toml  dockerfile
web2.0/voice-server/voice-file-upload/src/: main.rs  util.rs
web2.0/voice-server/voice-shared/: Cargo.toml
web2.0/voice-server/voice-shared/src/: cell_deref.rs  lib.rs  process.rs
web2.0/voice-server/voice-waveform-gen/: Cargo.toml  dockerfile
web2.0/voice-server/voice-waveform-gen/src/: main.rs  waveform_creator.rs
webapp/: package.json  pnpm-lock.yaml  vite.config.ts
webapp/src/: App.svelte
