[package]
name = "voice"
version = "0.2.0"
edition = "2021"
authors = ["Jiftoo <contact@jiftoo.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["multipart", "macros", "ws"] }
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
time = { version = "0.3.29", features = ["serde"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["io"] }
toml = "0.8.1"
tower-http = { version = "0.4.4", features = ["fs", "cors"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["regex", "env-filter"] }
which = "4.4.2"

[profile.dev.package."*"]
opt-level = 1

[profile.dev]
opt-level = 0
