[package]
name = "voice-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "^0.3.0"
axum = { version = "0.6.20", features = ["multipart", "macros", "ws"] }
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
strum = { version = "0.25.0", features = ["derive"] }
time = { version = "0.3.29", features = ["serde"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["io"] }
toml = "0.8.1"
tower-http = { version = "0.4.4", features = ["fs", "cors"] }
