[package]
name = "voice-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["macros"] }
serde = "1.0.194"
serde_json = "1.0.111"
sha2 = "0.10.8"
tap = "1.0.1"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "compression-br"] }
tracing = "0.1.40"
voice-shared = { path = "../voice-shared" }
