[package]
name = "voice-file-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features = ["macros"] }
reqwest = "0.11.23"
serde = "1.0.194"
sha2 = "0.10.8"
tokio = { version = "1.35.1", features = ["full"] }
voice-shared = { path = "../voice-shared" }
