[package]
name = "voice-file-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
reqwest = "0.11.23"
serde = "1.0.194"
serde_json = "1.0.111"
sha2 = "0.10.8"
tap = "1.0.1"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "compression-br"] }
voice-shared = { path = "../voice-shared" }
toml = "0.8.8"