[package]
name = "voice-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
csv = "1.3.0"
hex = "0.4.3"
reqwest = "0.11.23"
serde = { version = "1.0.194", features = ["derive"] }
sha256 = "1.4.0"
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
