[package]
name = "voice-waveform-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
# serde = { version = "1.0.194" }
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
voice-shared = { path = "../voice-shared" }
toml = "0.8.8"
